bundled_metadata/force-app/main/default/objects/ContractLineItem/fields/Asset_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Asset_Ext_Id__c</fullName>
    <externalId>true</externalId>
    <label>Asset External Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>