bundled_metadata/force-app/main/default/objects/ContractLineItem/fields/Product_ExtId__c.field-meta.xml
<CustomField>
    <fullName>Product_ExtId__c</fullName>
    <externalId>true</externalId>
    <label>Product External Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>